# slip

./: .dir-locals.el  .gitignore  LICENSE  Makefile  README.md  TODO.md  WIP.md  argparse.hpp  ast.cpp  ast.hpp  base.cpp  base.hpp  builtin.cpp  builtins.cpp  builtins.hpp  core.cpp  core.hpp  environment.hpp  eval.cpp  eval.hpp  gc.cpp  gc.hpp  import.cpp  import.hpp  infer.cpp  infer.hpp  ir.cpp  ir.hpp  kind.cpp  kind.hpp  list.hpp  main.cpp  maybe.hpp  meson.build  nan.hpp  opt.cpp  opt.hpp  package.cpp  package.hpp  parse.hpp  (+23 more)
lib/: core.el  func.el  list.el  repl.el
test/: Makefile  functor.el  monad.el
test/fail/: monomorphic-module-parameter.el
test/pass/: comment.el  fact.el  fib.el  functor.el  list.el  monad.el  monoid.el  showcase.el
tests/: Makefile  comment.el  module.el  monad.el
tests/fail/: external-state.el  monomorphic-module-parameter.el  monomorphic-parameter.el  polymorphic-recursion.el  state-leak.el  useless-definition-2.el  useless-definition.el  value-restriction.el
tests/pass/: comment.el  fact.el  fib.el  functor.el  import.el  list.el  maybe.el  monad.el  monoid.el  showcase.el  tree.el
tests/staging/: fact.el  fib.el  unsafe.el
